--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="Optical illusions zero-shot from diffusion models.">
-  <meta name="keywords" content="Diffusion, Illusions, Optical Illusions">
+        content="Scaling Concept With Text-Guided Diffusion Models.">
+  <meta name="keywords" content="Diffusion, Mutli-modal, Zero-shot applications">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Visual Anagrams</title>
+  <title>Scaling Concepts</title>
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-8P4QSMJ1ZN"></script>
@@ -49,33 +49,33 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-2 publication-title">Visual Anagrams: Generating Multi-View<br>Optical Illusions with Diffusion Models</h1>
+          <h1 class="title is-2 publication-title">Scaling Concept With Text-Guided Diffusion Models</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://dangeng.github.io" target="_blank">Daniel Geng</a>,</span>
+              <a href="https://wikichao.github.io/" target="_blank">Chao Huang</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://inbumpark.github.io/" target="_blank">Inbum Park</a>,</span>
+              <a href="https://liangsusan-git.github.io/" target="_blank">Susan Liang</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://andrewowens.com" target="_blank">Andrew Owens</a></span>
+              <a href="https://yunlong10.github.io/" target="_blank">Yunlong Tang</a><sup>1</sup>,</span>
+            <span class="author-block">
+              <a href="https://www.yapengtian.com/" target="_blank">Yapeng Tian</a><sup>2</sup>,</span>
+            <span class="author-block">
+              <a href="https://anuragkr90.github.io/" target="_blank">Anurag Kumar</a><sup>3</sup>,</span>
+            <span class="author-block">
+              <a href="https://www.cs.rochester.edu/~cxu22/" target="_blank">Chenliang Xu</a><sup>1</sup></span>
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block">University of Michigan</span>
-          </div>
-
-          <div class="is-size-6 publication-authors">
-            <span class="author-block">Correspondence to: <span class='rev'>ude.hcimu@gnegd</span></span>
-          </div>
-
-          <div class="is-size-5 publication-authors" style="margin:0.5rem 0;">
-            <span class="author-block">CVPR 2024 (Oral)</span>
+            <span class="author-block"><sup>1</sup>University of Rochester</span>,
+            <span class="author-block"><sup>2</sup>The University of Texas at Dallas</span>,
+            <span class="author-block"><sup>3</sup>Meta Reality Labs Research</span>
           </div>
 
           <div class="column has-text-centered" style="padding-bottom:0;">
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/pdf/2311.17919"
+                <a href=""
                    target="_blank"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -85,7 +85,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href="https://arxiv.org/abs/2311.17919"
+                <a href=""
                    target="_blank"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -94,21 +94,9 @@
                   <span>arXiv</span>
                 </a>
               </span>
-              <!-- Video Link. -->
-              <!--
-              <span class="link-block">
-                <a href="#"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fab fa-youtube"></i>
-                  </span>
-                  <span>Video (Coming Soon)</span>
-                </a>
-              </span>
-              -->
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/dangeng/visual_anagrams"
+                <a href="https://github.com/WikiChao/ScalingConcept"
                    target="_blank" class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -116,37 +104,8 @@
                   <span>Code</span>
                   </a>
               </span>
-              <!-- Colab Link. -->
-              <span class="link-block">
-                <a href="https://colab.research.google.com/drive/1hCvJR5GsQrhH1ceDjdbzLG8y6m2UdJ6l?usp=sharing"
-                   target="_blank" class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fas fa-book"></i>
-                  </span>
-                  <span>Colab</span>
-                  </a>
-              </span>
-              <!-- Cutout Link. -->
-              <span class="link-block">
-                <a href="./static/assets/jigsaw.pdf"
-                   target="_blank" class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fas fa-puzzle-piece"></i>
-                  </span>
-                  <span>Print a Jigsaw!</span>
-                  </a>
-              </span>
-              <!-- Slides Link. -->
-              <span class="link-block">
-                <a href="https://drive.google.com/file/d/1cONmH2YsGZ21l7drJeytHXxTWUM2ykd7/view?usp=sharing"
-                   target="_blank" class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fas fa-tv"></i>
-                  </span>
-                  <span>Slides (354 MB)</span>
-                  </a>
-              </span>
-              <!-- Bibtex Link. -->
+
+              <!-- Bibtex Link.
               <span class="link-block">
                 <a href="#bibtex"
                    class="external-link button is-normal is-rounded is-dark">
@@ -157,40 +116,8 @@
                   </a>
               </span>
             </div>
-          </div>
+          </div> -->
 
-          <div class="column has-text-centered" style="padding-top:0;">
-            <div class="publication-links">
-              <!-- PDF Link. -->
-              <span class="link-block">
-                <a href="./jigsaw.html"
-                    class="external-link button is-normal is-rounded is-dark download-link">
-                  <span class="icon">
-                    <i class="far fa-images"></i>
-                  </span>
-                  <span>Jigsaw Gallery</span>
-                </a>
-              </span>
-              <span class="link-block">
-                <a href="./rotations.html"
-                    class="external-link button is-normal is-rounded is-dark download-link">
-                  <span class="icon">
-                    <i class="far fa-images"></i>
-                  </span>
-                  <span>Rotations Gallery</span>
-                </a>
-              </span>
-              <span class="link-block">
-                <a href="./misc.html"
-                    class="external-link button is-normal is-rounded is-dark download-link">
-                  <span class="icon">
-                    <i class="far fa-images"></i>
-                  </span>
-                  <span>Misc. Gallery</span>
-                </a>
-              </span>
-            </div>
-          </div>
 
         </div>
       </div>
@@ -202,14 +129,14 @@
 <!-- TEASER + INTRO -->
 <section class="hero teaser">
   <h2 class="subtitle has-text-centered">
-    <b>tl;dr:</b> We use pretrained diffusion models<br>to make optical illusions
+    <b>tl;dr:</b> We use pretrained text-guided diffusion models<br>to scale up/down concepts in image/audio
   </h2>
-  <div class="is-centered is-max-desktop teaser">
+  <!-- <div class="is-centered is-max-desktop teaser">
     <video class="teaser-video" autoplay muted loop playsinline>
-      <source src="./static/videos/website_teaser.256.mp4"
+      <source src=""
               type="video/mp4">
     </video>
-  </div>
+  </div> -->
 </section>
 
 
@@ -221,14 +148,7 @@
         <h2 class="title is-3">Overview</h2>
         <div class="content has-text-justified">
           <p>
-          We present a simple, zero-shot method to generate <i>multi-view optical illusions</i>. 
-          These are images that look like one thing, but change appearance or identity when
-          transformed. We <a href="#method">show in theory</a> and practice that our method supports a broad range of transformations 
-          including <a href="#rot90_examples">rotations</a>, <a href="#flip_examples">flips</a>, 
-          <a href="#inversion_examples">color inversions</a>, <a href="#misc_examples">skews</a>, 
-          <a href="#jigsaw_examples">jigsaw rearrangements</a>, 
-          <a href="#perm_examples">random permutations</a>, and
-          <a href="#triple_examples">multiple views</a>.
+          We present a training-free method to scale up or down the existing concepts in image/audio. This can serves many existing editing tasks like face attribute editing, image harmonization, and audio separation. And we can also support new applications like canonical pose generation, weather manipulation, anime skectch enhancement, generative audio highlighting, and more.
           We show some examples below.
           </p>
         </div>
@@ -238,52 +158,29 @@
 </section>
 
 
-<!-- JIGSAW GRID -->
+<!-- Pose -->
 <section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
-      <h2 class="title is-3" id="jigsaw_examples">Jigsaw Permutations</h2>
+      <h2 class="title is-3" id="canonical_pose">Canonical Pose Generation</h2>
     </div>
     <div class="columns is-centered has-text-centered" style="">
       <div class="column is-three-fifths">
         <div class="content has-text-justified">
           <p style="margin-top:1rem;">
-            We can make images that change appearance when broken up into puzzle pieces and rearranged. These are jigsaw puzzles with multiple solutions!
+            By scaling up the concept of an object, we can adjust its pose to be more complete and visible
           </p>
         </div>
       </div>
     </div>
-    <div class="columns is-centered">
-      <video class="grid-video" autoplay muted loop playsinline>
-        <source src="./static/videos/viz/jigsaw.1.mp4"
-                type="video/mp4">
-      </video>
+    <div class="columns is-centered has-text-centered image-container">
+      <!-- Default image -->
+      <img src="./static/images/canonical pose/cat_raw.png"  alt="Default Image" class="default-image">
+      <!-- Hover image -->
+      <img src="./static/images/canonical pose/cat_transform.png" alt="Hover Image" class="hover-image">
     </div>
-    <div class="columns is-centered">
-      <video class="grid-video" autoplay muted loop playsinline>
-        <source src="./static/videos/viz/jigsaw.2.mp4"
-                type="video/mp4">
-      </video>
-    </div>
-    <div class="columns is-centered">
-      <video class="grid-video" autoplay muted loop playsinline>
-        <source src="./static/videos/viz/jigsaw.3.mp4"
-                type="video/mp4">
-      </video>
-    </div>
-    <div class="column has-text-centered" style="padding-top: 0px;">
-      <div class="publication-links" style="padding-top: 0.5rem;">
-        <span class="link-block">
-          <a href="./jigsaw.html"
-              class="external-link button is-normal is-rounded is-dark download-link">
-            <span class="icon">
-              <i class="far fa-images"></i>
-            </span>
-            <span>Jigsaw Gallery</span>
-          </a>
-        </span>
-      </div>
-    </div>
+
+
   </div>
 </section>
 
