--- a/index.html
+++ b/index.html
@@ -198,453 +198,11 @@
     </div>
     <div class="columns is-centered has-text-centered image-container">
       <!-- Default image -->
-      <img src="./static/images/canonical pose/cat_raw.png"  alt="Default Image" class="default-image">
+      <img src="./static/images/canonical pose/cat1_raw.png"  alt="Default Image" class="default-image">
       <!-- Hover image -->
-      <img src="./static/images/canonical pose/cat_transform.png" alt="Hover Image" class="hover-image">
+      <img src="./static/images/canonical pose/cat1_transform.png" alt="Hover Image" class="hover-image">
     </div>
 
-
-  </div>
-</section>
-
-<!-- FLIPS GRID -->
-<section class="section">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <h2 class="title is-3" id="flip_examples">Flips and 180° Rotations</h2>
-    </div>
-    <div class="columns is-centered has-text-centered" style="">
-      <div class="column is-three-fifths">
-        <div class="content has-text-justified">
-          <p style="margin-top:1rem;">
-            These illusions change appearance when flipped, or rotated 180 degrees.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="columns is-centered">
-      <video class="grid-video" autoplay muted loop playsinline>
-        <source src="./static/videos/viz/flips.1.mp4"
-                type="video/mp4">
-      </video>
-    </div>
-    <div class="columns is-centered">
-      <video class="grid-video" autoplay muted loop playsinline>
-        <source src="./static/videos/viz/flips.2.mp4"
-                type="video/mp4">
-      </video>
-    </div>
-    <div class="columns is-centered">
-      <video class="grid-video" autoplay muted loop playsinline>
-        <source src="./static/videos/viz/flips.3.mp4"
-                type="video/mp4">
-      </video>
-    </div>
-    <div class="columns is-centered">
-      <video class="grid-video" autoplay muted loop playsinline>
-        <source src="./static/videos/viz/flips.4.mp4"
-                type="video/mp4">
-      </video>
-    </div>
-    <div class="columns is-centered">
-      <video class="grid-video" autoplay muted loop playsinline>
-        <source src="./static/videos/viz/flips.5.mp4"
-                type="video/mp4">
-      </video>
-    </div>
-    <div class="column has-text-centered" style="padding-top: 0px;">
-      <div class="publication-links" style="padding-top: 0.5rem;">
-        <span class="link-block">
-          <a href="./rotations.html"
-              class="external-link button is-normal is-rounded is-dark download-link">
-            <span class="icon">
-              <i class="far fa-images"></i>
-            </span>
-            <span>Rotations Gallery</span>
-          </a>
-        </span>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- 90 DEGREE GRID -->
-<section class="section">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <h2 class="title is-3" id="rot90_examples">90° Rotations</h2>
-    </div>
-    <div class="columns is-centered has-text-centered" style="">
-      <div class="column is-three-fifths">
-        <div class="content has-text-justified">
-          <p style="margin-top:1rem;">
-            And these illusions change appearance when rotated 90 degrees.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="columns is-centered">
-      <video class="grid-video" autoplay muted loop playsinline>
-        <source src="./static/videos/viz/rotate.1.mp4"
-                type="video/mp4">
-      </video>
-    </div>
-    <div class="columns is-centered">
-      <video class="grid-video" autoplay muted loop playsinline>
-        <source src="./static/videos/viz/rotate.2.mp4"
-                type="video/mp4">
-      </video>
-    </div>
-    <div class="columns is-centered">
-      <video class="grid-video" autoplay muted loop playsinline>
-        <source src="./static/videos/viz/rotate.3.mp4"
-                type="video/mp4">
-      </video>
-    </div>
-    <div class="column has-text-centered" style="padding-top: 0px;">
-      <div class="publication-links" style="padding-top: 0.5rem;">
-        <span class="link-block">
-          <a href="./rotations.html"
-              class="external-link button is-normal is-rounded is-dark download-link">
-            <span class="icon">
-              <i class="far fa-images"></i>
-            </span>
-            <span>Rotations Gallery</span>
-          </a>
-        </span>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- INVERSIONS GRID -->
-<section class="section">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <h2 class="title is-3" id="inversion_examples">Color Inversions</h2>
-    </div>
-    <div class="columns is-centered has-text-centered" style="">
-      <div class="column is-three-fifths">
-        <div class="content has-text-justified">
-          <p style="margin-top:1rem;">
-            We can also make images that change when their colors are inverted.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="columns is-centered">
-      <video class="grid-video" autoplay muted loop playsinline>
-        <source src="./static/videos/viz/invert.1.mp4"
-                type="video/mp4">
-      </video>
-    </div>
-    <div class="columns is-centered">
-      <video class="grid-video" autoplay muted loop playsinline>
-        <source src="./static/videos/viz/invert.2.mp4"
-                type="video/mp4">
-      </video>
-    </div>
-    <div class="column has-text-centered" style="padding-top: 0px;">
-      <div class="publication-links" style="padding-top: 0.5rem;">
-        <span class="link-block">
-          <a href="./misc.html"
-              class="external-link button is-normal is-rounded is-dark download-link">
-            <span class="icon">
-              <i class="far fa-images"></i>
-            </span>
-            <span>Misc. Gallery</span>
-          </a>
-        </span>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- MISC GRID -->
-<section class="section">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <h2 class="title is-3" id="misc_examples">Miscellaneous Transformations</h2>
-    </div>
-    <div class="columns is-centered has-text-centered" style="">
-      <div class="column is-three-fifths">
-        <div class="content has-text-justified">
-          <p style="margin-top:1rem;">
-            Here we show miscellaneous illusions. This includes 
-            skewing (a reference to 
-            <a href="https://en.wikipedia.org/wiki/The_Ambassadors_(Holbein)" target="_blank">this</a> 
-            Hans Holbein painting!) and what we call "inner circle rotations."
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="columns is-centered">
-      <video class="grid-video" autoplay muted loop playsinline>
-        <source src="./static/videos/viz/misc.1.mp4"
-                type="video/mp4">
-      </video>
-    </div>
-    <div class="columns is-centered">
-      <video class="grid-video" autoplay muted loop playsinline>
-        <source src="./static/videos/viz/misc.2.mp4"
-                type="video/mp4">
-      </video>
-    </div>
-    <div class="column has-text-centered" style="padding-top: 0px;">
-      <div class="publication-links" style="padding-top: 0.5rem;">
-        <span class="link-block">
-          <a href="./misc.html"
-              class="external-link button is-normal is-rounded is-dark download-link">
-            <span class="icon">
-              <i class="far fa-images"></i>
-            </span>
-            <span>Misc. Gallery</span>
-          </a>
-        </span>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- PATCH GRID -->
-<section class="section">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <h2 class="title is-3" id="perm_examples">Random Patch Permutations</h2>
-    </div>
-    <div class="columns is-centered has-text-centered" style="">
-      <div class="column is-three-fifths">
-        <div class="content has-text-justified">
-          <p style="margin-top:1rem;">
-            We can also rearrange patches. Surprisingly, increasing the 
-            number of patches to \(64 \times 64\) still gives recognizable results,
-            albeit of lower quality.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="columns is-centered">
-      <video class="grid-video" autoplay muted loop playsinline>
-        <source src="./static/videos/viz/patch.1.mp4"
-                type="video/mp4">
-      </video>
-    </div>  
-    <div class="columns is-centered">
-      <video class="grid-video" autoplay muted loop playsinline>
-        <source src="./static/videos/viz/patch.2.mp4"
-                type="video/mp4">
-      </video>
-    </div>  
-    <div class="column has-text-centered" style="padding-top: 0px;">
-      <div class="publication-links" style="padding-top: 0.5rem;">
-        <span class="link-block">
-          <a href="./misc.html"
-              class="external-link button is-normal is-rounded is-dark download-link">
-            <span class="icon">
-              <i class="far fa-images"></i>
-            </span>
-            <span>Misc. Gallery</span>
-          </a>
-        </span>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- THREE VIEW GRID -->
-<section class="section">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <h2 class="title is-3" id="triple_examples">Three Views</h2>
-    </div>
-    <div class="columns is-centered has-text-centered" style="">
-      <div class="column is-three-fifths">
-        <div class="content has-text-justified">
-          <p style="margin-top:1rem;">
-            Finally, we can do more than just two views, although
-            it is much harder to get good results. Here are 
-            three view illusions with a series of rotations.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="columns is-centered">
-      <video class="grid-video" autoplay muted loop playsinline>
-        <source src="./static/videos/viz/3view.mp4"
-                type="video/mp4">
-      </video>
-    </div>  
-  </div>
-</section>
-
-<!-- FOUR VIEW GRID -->
-<section class="section">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <h2 class="title is-3" id="quadruple_examples">Four Views</h2>
-    </div>
-    <div class="columns is-centered has-text-centered" style="">
-      <div class="column is-three-fifths">
-        <div class="content has-text-justified">
-          <p style="margin-top:1rem;">
-            And here is a four-view illusion. It was tremendously
-            difficult to get this to work, and this was the only 
-            half-decent one we found!
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="columns is-centered">
-      <video class="grid-video" autoplay muted loop playsinline>
-        <source src="./static/videos/viz/4view.mp4"
-                type="video/mp4">
-      </video>
-    </div>  
-  </div>
-</section>
-
-<!-- METHOD -->
-<section class="section">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3 has-text-centered" id="method">Method</h2>
-        <div class="content has-text-justified">
-          <img src="./static/images/method.jpg" class="center-img"/>
-          <p>
-            Our method is conceptually simple. We take an off-the-shelf diffusion model and use it
-            to estimate the noise in different views or transformations, \(v_i\), of an image. 
-            The noise estimates are then aligned by applying the inverse view, \(v_i^{-1}\),
-            and averaged together. This averaged noise estimate is then used to take a diffusion step.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- CONDITIONS -->
-<section class="section">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3 has-text-centered">Conditions on Views</h2>
-        <div class="content has-text-justified">
-          <p>
-            We find that not every view function works with the above method. Of course, \(v_i\) must
-            be invertible, but we discuss two additional constraints.
-          </p>
-        </div>
-        <h2 class="title is-4">Linearity</h2>
-        <div class="content has-text-justified">
-          <p>
-            A diffusion model is trained to estimate the noise in noisy data \(\mathbf{x}_t\) conditioned 
-            on time step \(t\). The noisy data \(\mathbf{x}_t\) is expected to have the form 
-            \[\mathbf{x}_t = w_t^{\text{signal}}\underbrace{\mathbf{x}_0}_{\text{signal}} + w_t^{\text{noise}}\underbrace{\epsilon\vphantom{\mathbf{x}_0}}_{\text{noise}}.\]
-            That is, \(\mathbf{x}_t\) is a weighted average of pure signal \(\mathbf{x_0}\) 
-            and pure noise \(\epsilon\), specifically with weights \(w_t^{\text{signal}}\) and \(w_t^{\text{noise}}\). 
-            Therefore, our view, \(v\) must maintain this weighting between signal and noise. This can be achieved
-            by making \(v\) linear, which we represent by the square matrix \(\mathbf{A}\). By linearity
-            \[\begin{aligned} v(\mathbf{x}_t) &= \mathbf{A}(w_t^{\text{signal}} \mathbf{x}_0+w_t^{\text{noise}} \epsilon)\\[7pt] &= w_t^{\text{signal}} \underbrace{\mathbf{A}\mathbf{x}_0}_{\text{new signal}} + w_t^{\text{noise}} \underbrace{\mathbf{A}\epsilon}_{\text{new noise}}. \end{aligned}\]
-            Effectively, \(v\) acts on the signal and the noise independently, and combines the result with the correct weighting.
-          </p>
-        </div>
-        <h2 class="title is-4">Statistical Consistency</h2>
-        <div class="content has-text-justified">
-          <p>
-            Diffusion models are trained with the assumption that the noise is drawn iid from a standard normal.
-            Therefore we must ensure that the transformed noise also follows these statistics. That is, we need
-            \[\mathbf{A}\epsilon \sim \mathcal{N}(0, I).\]
-            For linear transformations, this is equivalent to the condition that \(\mathbf{A}\) is orthogonal.
-            Intuitively, orthogonal matrices respect the spherical symmetry of the standard multivariate Gaussian distribution.
-          </p>
-          <p>
-            Therefore, for a transformation to work with our method, it is <b>sufficient for it to be orthogonal.</b>
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-<!-- ORTHOGONAL -->
-<section class="section">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3 has-text-centered">Orthogonal Transformations</h2>
-        <div class="content has-text-justified">
-          <p>
-            Most orthogonal transformations on images are meaningless, visually. For example, we transform
-            the image below with a randomly sampled orthogonal matrix.
-          </p>
-        </div>
-        <div class="content has-text-justified">
-          <img src="./static/images/orthogonal.jpeg" class="center-img"/>
-        </div>
-        <div class="content has-text-justified">
-          <p>
-            However, <b>permutations matrices are a subset of orthogonal matrices,</b> and are quite interpretable. 
-            They are just rearrangements of pixels in an image. This is where the idea of a <b>visual anagram</b>
-            comes from. The majority of illusions here can be interpreted this way—as specific rearrangements of pixels—such as
-            <a href="#rot90_examples">rotations</a>, <a href="#flip_examples">flips</a>, 
-            <a href="#misc_examples">skews</a>, <a href="#misc_examples">"inner rotations,"</a> 
-            <a href="#jigsaw_examples">jigsaw rearrangements</a>, and 
-            <a href="#perm_examples">patch permutations</a>. Finally, <a href="#inversion_examples">color inversions</a>
-            are not permutations, but are orthogonal as they are a negation of pixel values.
-            
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-
-
-<section class="section">
-  <div class="container is-max-desktop">
-    <!-- Concurrent Work. -->
-    <div class="columns is-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3">Related Links</h2>
-
-        <div class="content has-text-justified">
-          <p>
-            There are several other great works in this area:
-          </p>
-          <p>
-            <a href="https://diffusionillusions.com/" target="_blank">Diffusion Illusions</a>, 
-            by <a href="https://ryanndagreat.github.io/" target="_blank">Ryan Burgert</a> <i>et al.</i>,
-            which produces multi-view illusions, along with other visual effects, through score distillation sampling.
-          </p>
-          <p>
-            This <a href="https://github.com/tancik/Illusion-Diffusion" target="_blank">colab notebook</a> by 
-            <a href="https://www.matthewtancik.com/about-me" target="_blank">Matthew Tancik</a>, 
-            which introduces a similar idea to ours. We improve upon it significantly in 
-            terms of quality of illusions, range of transformations, and theoretical analysis.
-          </p>
-          <p>
-            <a href="https://www.reddit.com/r/StableDiffusion/comments/16ew9fz/spiral_town_different_approach_to_qr_monster/" target="_blank">Recent work by a pseudonymous artist</a>, Ugleh,
-            uses a Stable Diffusion model finetuned for generating QR codes to produce images whose global structure subtly matches a given template image.
-          </p>
-          <p>
-            <a href="https://dangeng.github.io/factorized_diffusion/" target="_blank">Factorized Diffusion</a>, 
-            follow up work to Visual Anagrams which makes many different types of "hybrid" illusions, including 
-            hybrid images with three different contents, partially resolving an open problem from the 
-            <a href="https://stanford.edu/class/ee367/reading/OlivaTorralb_Hybrid_Siggraph06.pdf" target="_blank">
-            original hybrid images paper</a> (see section 2.3).
-          </p>
-          <p>
-            <a href="https://ificl.github.io/images-that-sound/" target="_blank">Images that Sound</a>, 
-            which creates spectrograms that also look like images using a similar technique, but across modalities.
-          </p>
-        </div>
-      </div>
-    </div>
-    <!--/ Concurrent Work. -->
 
   </div>
 </section>
