--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     </div>
     <div class="columns is-centered has-text-centered image-container">
       <!-- Default image -->
-      <img src="./static/images/canonical pose/cat1_raw.png"  alt="Default Image" class="default-image">
+      <img src="./static/images/canonical pose/cat1_raw.png" alt="Default Image" class="default-image">
       <!-- Hover image -->
       <img src="./static/images/canonical pose/cat1_transform.png" alt="Hover Image" class="hover-image">
     </div>
@@ -208,22 +208,22 @@
 </section>
 
 
-<section class="section" id="bibtex">
+<!-- <section class="section" id="bibtex">
   <div class="container is-max-desktop content">
     <div class="columns is-centered">
       <div class="column is-four-fifths">
         <h2 class="title">BibTeX</h2>
-        <pre><code>@InProceedings{geng2024visualanagrams,
-  title     = {Visual Anagrams: Generating Multi-View Optical Illusions with Diffusion Models},
-  author    = {Geng, Daniel and Park, Inbum and Owens, Andrew},
-  booktitle = {Conference on Computer Vision and Pattern Recognition (CVPR)},
+        <pre><code>@article{,
+  title     = {},
+  author    = {},
+  booktitle = {},
   year      = {2024}
-  url       = {https://arxiv.org/abs/2311.17919},
+  url       = {},
 }</code></pre>
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 
 <footer class="footer">
