add anime and stitching

--- a/index.html
+++ b/index.html
@@ -198,15 +198,68 @@
     </div>
     <div class="columns is-centered has-text-centered image-container">
       <!-- Default image -->
-      <img src="./static/images/canonical pose/cat1_raw.png" alt="Default Image" class="default-image">
+      <img src="./static/images/canonical pose/cat1_raw.png" width="50%" alt="Default Image" class="default-image">
       <!-- Hover image -->
-      <img src="./static/images/canonical pose/cat1_transform.png" alt="Hover Image" class="hover-image">
+      <img src="./static/images/canonical pose/cat1_transform.png" width="50%" alt="Hover Image" class="hover-image">
     </div>
 
 
   </div>
 </section>
 
+
+<!-- Object stitching -->
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <h2 class="title is-3" id="canonical_pose">Object Stitching</h2>
+    </div>
+    <div class="columns is-centered has-text-centered" style="">
+      <div class="column is-three-fifths">
+        <div class="content has-text-justified">
+          <p style="margin-top:1rem;">
+            By enhancing an object's concept, we can seamlessly stitch the object and the background together, completing and harmonizing the whole image
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="columns is-centered has-text-centered image-container">
+      <!-- Default image -->
+      <img src="./static/images/stitching/stitching1_raw.png" width="50%" alt="Default Image" class="default-image">
+      <!-- Hover image -->
+      <img src="./static/images/stitching/stitching1_transform.png" width="50%" alt="Hover Image" class="hover-image">
+    </div>
+
+
+  </div>
+</section>
+
+
+<!-- Anime enhancement -->
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <h2 class="title is-3" id="canonical_pose">Anime Enhancement</h2>
+    </div>
+    <div class="columns is-centered has-text-centered" style="">
+      <div class="column is-three-fifths">
+        <div class="content has-text-justified">
+          <p style="margin-top:1rem;">
+            By scaling up the "anime" concept, we can mitigate the fuzziness and blurriness issues commonly encountered in the anime production process
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="columns is-centered has-text-centered image-container">
+      <!-- Default image -->
+      <img src="./static/images/anime/anime1_raw.png" width="70%" alt="Default Image" class="default-image">
+      <!-- Hover image -->
+      <img src="./static/images/anime/anime1_transform.png" width="70%" alt="Hover Image" class="hover-image">
+    </div>
+
+
+  </div>
+</section>
 
 <!-- <section class="section" id="bibtex">
   <div class="container is-max-desktop content">
