add anime figure

--- a/index.html
+++ b/index.html
@@ -146,7 +146,6 @@
   </div>
 </section>
 
-
 <!-- TEASER + INTRO -->
  <!-- the width should be the same with other element -->
  <img src="./static/images/image.png" class="center-img" style="width: 70%; max-width: 800px; margin: 0 auto; display: block;"/>
@@ -180,6 +179,37 @@
   </div>
 </section>
 
+<!-- Anime enhancement -->
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <h2 class="title is-3" id="canonical_pose">Anime Enhancement</h2>
+    </div>
+    <div class="columns is-centered has-text-centered" style="">
+      <div class="column is-three-fifths">
+        <div class="content has-text-justified">
+          <p style="margin-top:1rem;">
+            By scaling up the "anime" concept, we can mitigate the fuzziness and blurriness issues commonly encountered in the anime production process
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="columns is-centered has-text-centered image-container">
+      <!-- Default image -->
+      <img src="./static/images/anime/anime1_raw.png" width="80%" alt="Default Image" class="default-image">
+      <!-- Hover image -->
+      <img src="./static/images/anime/anime1_transform.png" width="80%" alt="Hover Image" class="hover-image">
+    </div>
+
+    <div class="columns is-centered has-text-centered image-container">
+      <!-- Default image -->
+      <img src="./static/images/anime/anime2_raw.png" width="80%" alt="Default Image" class="default-image">
+      <!-- Hover image -->
+      <img src="./static/images/anime/anime2_transform.png" width="80%" alt="Hover Image" class="hover-image">
+    </div>
+
+  </div>
+</section>
 
 <!-- Pose -->
 <section class="section">
@@ -234,33 +264,6 @@
   </div>
 </section>
 
-
-<!-- Anime enhancement -->
-<section class="section">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <h2 class="title is-3" id="canonical_pose">Anime Enhancement</h2>
-    </div>
-    <div class="columns is-centered has-text-centered" style="">
-      <div class="column is-three-fifths">
-        <div class="content has-text-justified">
-          <p style="margin-top:1rem;">
-            By scaling up the "anime" concept, we can mitigate the fuzziness and blurriness issues commonly encountered in the anime production process
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="columns is-centered has-text-centered image-container">
-      <!-- Default image -->
-      <img src="./static/images/anime/anime1_raw.png" width="70%" alt="Default Image" class="default-image">
-      <!-- Hover image -->
-      <img src="./static/images/anime/anime1_transform.png" width="70%" alt="Hover Image" class="hover-image">
-    </div>
-
-
-  </div>
-</section>
-
 <!-- <section class="section" id="bibtex">
   <div class="container is-max-desktop content">
     <div class="columns is-centered">
@@ -290,9 +293,8 @@
             href="http://creativecommons.org/licenses/by-sa/4.0/"
             target="_blank">Creative
             Commons Attribution-ShareAlike 4.0 International License</a>, 
-            and is written by <a href="https://keunhong.com/" target="_blank">
-            Keunhong Park</a> for the <a href="https://nerfies.github.io/" 
-            target="_blank">Nerfies</a> project. You are free to use the 
+            and the template is from the <a href="https://nerfies.github.io/" 
+            target="_blank">Nerfies</a> and the <a href="https://dangeng.github.io/visual_anagrams/">Visual Anagrams</a> projects. You are free to use the 
             <a href="https://github.com/nerfies/nerfies.github.io"
             target="_blank">source code</a> of this website,
             but please keep these links in the footer, 
