--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <div class="content has-text-justified">
           <p>
           We present a training-free method to scale up or down the existing concepts in image/audio. This can serves many existing editing tasks like face attribute editing, image harmonization, and audio separation. And we can also support new applications like canonical pose generation, weather manipulation, anime skectch enhancement, generative audio highlighting, and more.
-          We show some examples below.
+          We show some examples below. <b>Place your mouse on the image to see the transformation.</b>
           </p>
         </div>
       </div>
