--- a/index.html
+++ b/index.html
@@ -161,12 +161,18 @@
 </section>
 <br>
 
-<div class="columns is-centered has-text-centered image-container">
-  <!-- Default image -->
-  <img src="./static/images/anime/anime1_raw.png" width="50%" alt="Default Image" class="default-image">
-  <!-- Hover image -->
-  <img src="./static/images/anime/anime1_transform.png" width="50%" alt="Hover Image" class="hover-image">
-</div>
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered" style="">
+      <div class="columns is-centered has-text-centered image-container">
+        <!-- Default image -->
+        <img src="./static/images/anime/anime1_raw.png" width="80%" alt="Default Image" class="default-image">
+        <!-- Hover image -->
+        <img src="./static/images/anime/anime1_transform.png" width="80%" alt="Hover Image" class="hover-image">
+      </div>
+    </div>
+  </div>
+</section>
 
 
 <!-- OVERVIEW -->
