--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://arxiv.org/pdf/2410.24151"
                    target="_blank"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -106,7 +106,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href=""
+                <a href="https://arxiv.org/abs/2410.24151"
                    target="_blank"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
